pruebas de admincontroller
se hicieron para verificar que los botones funcionaban

--- a/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
@@ -148,6 +148,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AdminControllerTest.cs" />
     <Compile Include="Controllers\AuthControllerTest.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\VisualizarFormularioControllerTest.cs" />
