--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -516,8 +516,8 @@
     <Content Include="Views\Shared\SeleccionFormularios.cshtml" />
     <Content Include="Views\LlenarFormulario\Index.cshtml" />
     <Content Include="Views\Item\AgregarOpciones.cshtml" />
-    <Content Include="Views\CrearFormulario\FormularioVParcial.cshtml" />
     <Content Include="Views\CrearFormulario\VistaPreviaPregunta.cshtml" />
+    <Content Include="Views\CrearFormulario\VistaFormularioVParcial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
