--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -517,9 +517,9 @@
     <Content Include="Views\Auth\Permisos.cshtml" />
     <Content Include="Views\Shared\SeleccionFormularios.cshtml" />
     <Content Include="Views\LlenarFormulario\Index.cshtml" />
-    <Content Include="Views\Item\AgregarOpciones.cshtml" />
     <Content Include="Views\CrearFormulario\VistaPreviaPregunta.cshtml" />
     <Content Include="Views\CrearFormulario\VistaFormularioVParcial.cshtml" />
+    <Content Include="Views\Item\AgregarOpcionesVParcial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
