--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -523,6 +523,7 @@
     <Content Include="Views\Item\AgregarOpciones.cshtml" />
     <Content Include="Views\CrearFormulario\VistaPreviaPregunta.cshtml" />
     <Content Include="Views\CrearFormulario\VistaFormularioVParcial.cshtml" />
+    <Content Include="Views\CrearFormulario\AsignarSecciones.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
