--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -500,6 +500,7 @@
     <Content Include="Views\Perfil\Borrar.cshtml" />
     <Content Include="Views\Perfil\Cambiar.cshtml" />
     <Content Include="Views\Perfil\ConfirmarBorrado.cshtml" />
+    <Content Include="Views\Perfil\Crear.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
