creación de vista cuando se entra al botón de eliminar sección de un formulario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -511,6 +511,7 @@
     <Content Include="Views\Auth\Permisos.cshtml" />
     <Content Include="Views\Shared\SeleccionFormularios.cshtml" />
     <Content Include="Views\LlenarFormulario\Index.cshtml" />
+    <Content Include="Views\CrearFormulario\EliminarSeccion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
